[package]
name = "pw_blog_os"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-timeout = 300
test-success-exit-code = 33

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.dev]
#panic = "abort"
#
#[profile.release]
#panic = "abort"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9.1"
x86_64 = "0.14.3"
uart_16550 = "0.2.15"
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.9.0"

[dependencies.crossbeam-queue]
version = "0.2.1"
default_features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.15"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
